# vanaheim-audio-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
app/: main.py
app/api/v1/: endpoints.py
app/application/: prompts.py
app/application/services/: audio_generator.py  script_generator.py
app/core/: config.py  logging.py  prompts.py
app/domain/: exceptions.py  models.py  ports.py
app/infrastructure/adapters/: edge_tts_adapter.py  file_storage_adapter.py  openai_adapter.py  supabase_adapter.py  supabase_storage_adapter.py
app/infrastructure/api/: main.py  schemas.py
app/infrastructure/api/v1/: router.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: reset.sql  schema.sql
app/infrastructure/monitoring/: logger.py
app/schemas/: simulation.py
app/services/: audio_service.py  script_service.py
docs/: test_request.http
docs/es/: LICENSE  README.md  test_request.http
tests/: test_api.py  test_models.py  test_services.py
tests/application/: test_services.py
tests/domain/: test_models.py
tests/infrastructure/: test_api.py
